--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
   <title>Paula Marinho - Web Developer</title>
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="shortcut icon" href="./assets/image/icon-portfolio.svg" type="image/x-icon">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <header>
     <div class="container">
 
-      <a href="#">
-        <h1 class="logo">Paula Marinho</h1>
+      <a href="#" class="logo">
+        <img src="./assets/image/logo.svg" alt="">
       </a>
 
       <nav>
@@ -77,7 +82,7 @@
             </ul>
           </div>
 
-          <a href="#about">Sobre mim</a>
+          <a href="#about" class="btn">Sobre mim</a>
 
         </div>
 
@@ -95,6 +100,7 @@
         </div>
 
         <div class="about-content">
+          <p class="section-subtitle">Sobre mim</p>
           <p>
             Eu sou uma estudante de full stack, o que significa que estou aprendendo sobre desenvolvimento de software completo, incluindo front-end (interação com o usuário), back-end (registro de dados e processamento) e banco de dados. Eu tenho paixão por criar aplicações web e mobile e gosto de explorar novas tecnologias e soluções para solucionar problemas complexos.
           </p>
@@ -136,7 +142,7 @@
 
               <textarea name="message" placeholder="Mensagem" required></textarea>
 
-              <button type="submit">Enviar Mensagem</button>
+              <button type="submit" class="btn">Enviar Mensagem</button>
 
             </form>
 
