--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Paula Marinho - Web Developer</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="shortcut icon" href="./assets/image/icon-portfolio.svg" type="image/x-icon">
-
 
   <!-- Fontes Google -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="./assets/css/base.css">
+  <link rel="stylesheet" href="./assets/css/reused.css">
+  <link rel="stylesheet" href="./assets/css/header.css">
+  <link rel="stylesheet" href="./assets/css/home.css">
+  <link rel="stylesheet" href="./assets/css/about.css">
+  <link rel="stylesheet" href="./assets/css/portfolio.css">
+  <link rel="stylesheet" href="./assets/css/skills.css">
+  <link rel="stylesheet" href="./assets/css/contact.css">
 
 </head>
 <body>
@@ -104,7 +112,7 @@
       <div class="container">
 
         <div class="about-banner">
-          <img src="./assets/image/paula.png" alt="">
+          <img src="./assets/image/paula.jpg" alt="">
         </div>
 
         <div class="about-content">
