--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
 </head>
 <body>
+
+  <!-- Header -->
+
   <header class="header" data-header>
     <div class="container">
 
@@ -80,7 +83,7 @@
           </h2>
 
           <p>
-            Sou uma estudante full-stack apaixonada pelo desenvolvimento de software. Estou sempre em busca de novos conhecimentos para me tornar uma desenvolvedora cada vez melhor. Adoro o desafio de aprender e aplicar novos conceitos em projetos reais.
+            Sou uma estudante full-stack apaixonada pelo desenvolvimento de software. Estou sempre em busca de novos conhecimentos para me tornar uma desenvolvedora cada vez melhor.
           </p>
 
           <div class="home-links">
@@ -111,9 +114,9 @@
     <section class="section about" id="about">
       <div class="container">
 
-        <div class="about-banner">
+        <!-- <div class="about-banner">
           <img src="./assets/image/paula.jpg" alt="">
-        </div>
+        </div> -->
 
         <div class="about-content">
           <p class="section-subtitle">Sobre mim</p>
