--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 
+
+  <!-- Icons Google -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
+
   <!-- CSS -->
   <link rel="stylesheet" href="./assets/css/base.css">
   <link rel="stylesheet" href="./assets/css/reused.css">
@@ -26,7 +30,6 @@
 <body>
 
   <!-- Header -->
-
   <header class="header" data-header>
     <div class="container">
 
@@ -61,13 +64,21 @@
         </ul>
       </nav>
 
+      <!-- TODO: light and dark mode with google icons has already imported below-->
+
+      <!-- <span class="material-symbols-rounded">
+        light_mode
+      </span>
+      <span class="material-symbols-rounded">
+        dark_mode
+      </span> -->
+
     </div>
   </header>
 
   <main>
 
     <!-- Home -->
-
     <section class="section home" id="home">
       <div class="container">
 
@@ -110,7 +121,6 @@
 
 
     <!-- About -->
-
     <section class="section about" id="about">
       <div class="container">
 
@@ -133,7 +143,6 @@
 
 
     <!-- Portfolio -->
-
     <section class="section portfolio" id="portfolio">
       <div class="container">
 
@@ -164,7 +173,6 @@
 
 
     <!-- Skills -->
-
     <section class="section skills" id="skills"></section>
     <div class="container">
       
@@ -172,7 +180,6 @@
 
 
     <!-- Contact -->
-
     <section class="section contact" id="contact">
       <div class="container">
 
@@ -238,6 +245,9 @@
 
   </main>
 
+  <footer>
+
+  </footer>
 
 
   <!-- Ionicon link -->
