--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <link rel="stylesheet" href="./assets/css/home.css">
   <link rel="stylesheet" href="./assets/css/about.css">
   <link rel="stylesheet" href="./assets/css/portfolio.css">
-  <link rel="stylesheet" href="./assets/css/skills.css">
   <link rel="stylesheet" href="./assets/css/contact.css">
+  <link rel="stylesheet" href="./assets/css/footer.css">
 
 </head>
 <body>
@@ -57,9 +57,6 @@
             </li>
             <li>
               <a href="#portfolio">Portfólio</a>
-            </li>
-            <li>
-              <a href="#skills">Habilidades</a>
             </li>
             <li>
               <a href="#contact">Contato</a>
@@ -177,13 +174,6 @@
     </section>
 
 
-    <!-- Skills -->
-    <section class="section skills" id="skills"></section>
-    <div class="container">
-      
-    </div>
-
-
     <!-- Contact -->
     <section class="section contact" id="contact">
       <div class="container">
@@ -251,8 +241,14 @@
   </main>
 
   <footer>
-
+    <div class="container">
+      <p>©Paula Marinho. All Rights Reserved</p>
+    </div>
   </footer>
+
+
+  <!-- Back to Top -->
+  <a href="#top" class="back-to-top" data-back-to-top>BACK TOP</a>
 
 
   <!-- IonIcon -->
