--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
           <ul class="navbar-list">
             
             <li>
-              <a href="#home">Home</a>
+              <a href="#home" data-nav-link>Home</a>
             </li>
             <li>
-              <a href="#about">Sobre</a>
+              <a href="#about" data-nav-link>Sobre</a>
             </li>
             <li>
-              <a href="#portfolio">Portfólio</a>
+              <a href="#portfolio" data-nav-link>Portfólio</a>
             </li>
             <li>
-              <a href="#contact">Contato</a>
+              <a href="#contact" data-nav-link>Contato</a>
             </li>  
           </ul>
         </nav>
