--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Paula Marinho - Web Developer</title>
-  <link rel="shortcut icon" href="./assets/img/icon-portfolio.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/img/icon-portfolio.svg" type="image/x-icon">
 
   <!-- Fontes Google -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,14 +17,14 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="./assets/css/base.css">
-  <link rel="stylesheet" href="./assets/css/reused.css">
-  <link rel="stylesheet" href="./assets/css/header.css">
-  <link rel="stylesheet" href="./assets/css/home.css">
-  <link rel="stylesheet" href="./assets/css/about.css">
-  <link rel="stylesheet" href="./assets/css/portfolio.css">
-  <link rel="stylesheet" href="./assets/css/contact.css">
-  <link rel="stylesheet" href="./assets/css/footer.css">
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/reused.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="css/about.css">
+  <link rel="stylesheet" href="css/portfolio.css">
+  <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="css/footer.css">
 
 </head>
 <body>
@@ -155,20 +155,7 @@
 
         <p class="section-subtitle">Portfólio</p>
         <h2 class="section-title">Meus melhores projetos</h2>
-
-        <ul class="portfolio-list" id="repo-list">
-
-          <li class="project-card">
-            <img class="card-img" src="https://github.com/paulaandrezza/Pricing-Table/raw/main/assets/projeto.PNG" alt="">
-            
-            <div class="card-content">
-              <h3 class="project-title">Pricing Table</h3>
-              <p class="project-subtitle">Página com uma tabela com opções de preços/planos de um produto/serviço</p>
-              <p class="project-language">Python</p>
-            </div>
-          </li>
-
-        </ul>
+        <ul class="portfolio-list" id="repo-list"></ul>
 
       </div>
     </section>
@@ -256,11 +243,7 @@
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
   <!-- Js link -->
-  <script src="./assets/js/main.js"></script>
-  <script src="./assets/js/git-api.js"></script>
-  <script src="./assets/js/repo-main.js"></script>
-  <script src="./assets/js/repo-model.js"></script>
-
+  <script type="module" src="js/main.js"></script>
 
 </body>
 </html>
