Add tag a to portfolio to github

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         </div>
   
   
+<!-- TODO: Add ripple effect to your buttons -->
+
         <nav class="navbar">
           <ul class="navbar-list">
             
@@ -74,6 +76,8 @@
           <button id="toggle"></button>
         </div>
 
+
+<!-- TODO: Arrumar botao para ser clicavel em toda area -->
 
       </div>
 
@@ -158,6 +162,9 @@
         <ul class="portfolio-list" id="repo-list"></ul>
 
       </div>
+
+      <a href="https://github.com/paulaandrezza" class="btn" target="_blank">Veja mais no meu GitHub</a>
+
     </section>
 
 
