changing the clickable area on the theme button

--- a/index.html
+++ b/index.html
@@ -65,22 +65,18 @@
             </li>  
           </ul>
         </nav>
-  
-        <div class="switcher">
+
+        <button id="switcher" class="switcher">
           <div class="light-mode">
             <ion-icon name="sunny-outline"></ion-icon>
           </div>
           <div class="dark-mode">
             <ion-icon name="moon-outline"></ion-icon>
           </div>
-          <button id="toggle"></button>
-        </div>
-
-
-<!-- TODO: Arrumar botao para ser clicavel em toda area -->
+          <div id="toggle"></div>
+        </button>
 
       </div>
-
 
     </div>
   </header>
