Add hover to nav header

--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
           <ul class="navbar-list">
             
             <li>
-              <a href="#home" data-nav-link>Home</a>
+              <a class="btn2" href="#home" data-nav-link>Home</a>
             </li>
             <li>
-              <a href="#about" data-nav-link>Sobre</a>
+              <a href="#about" class="btn2" data-nav-link>Sobre</a>
             </li>
             <li>
-              <a href="#portfolio" data-nav-link>Portfólio</a>
+              <a href="#portfolio" class="btn2" data-nav-link>Portfólio</a>
             </li>
             <li>
-              <a href="#contact" data-nav-link>Contato</a>
+              <a href="#contact" class="btn2" data-nav-link>Contato</a>
             </li>  
           </ul>
         </nav>
