Tirando form da seção contato

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/about.css">
   <link rel="stylesheet" href="css/portfolio.css">
+  <!-- <link rel="stylesheet" href="css/portfolio-teste.css"> -->
   <link rel="stylesheet" href="css/contact.css">
   <link rel="stylesheet" href="css/footer.css">
 
@@ -37,14 +38,11 @@
         <img id="logo" src="assets/img/logo-light.svg" alt="Logo">
       </a>
 
-
       <div>
-
 
         <div class="menu-icon" id="menu-icon">
           <span></span><span></span><span></span>
         </div>
-  
   
 <!-- TODO: Add ripple effect to your buttons -->
 
@@ -170,56 +168,39 @@
 
         <div class="contact-card">
 
-          <h2>Me deixe uma mensagem</h2>
-
+          <h2>Contato</h2>
           <div class="wrapper">
 
-            <form action="" class="contact-form">
-
-              <input type="text" name="name" placeholder="Nome" required class="contact-input">
-
-              <input type="email" name="email" placeholder="Email" required class="contact-input">
-
-              <textarea name="message" placeholder="Mensagem" required class="contact-input"></textarea>
-
-              <button type="submit" class="btn btn-submit">Enviar Mensagem</button>
-
-            </form>
-
+            <div>
+              <p>Olá! Se você chegou até aqui é porque está interessado em entrar em contato comigo.</p>
+              <p>Fique à vontade para enviar uma mensagem, sugestão ou proposta de trabalho.</p>
+              <p>Responderei assim que possível.</p>
+              <p>Obrigada pela visita!</p>
+            </div>
+            
             <ul class="contact-list">
-
               <li class="contact-item">
-                
                 <div class="contact-icon">
                   <ion-icon name="mail"></ion-icon>
                 </div>
-
                 <div>
                   <h3 class="contact-item-title">Email</h3>
-
                   <a href="mailto:paulaandrezza25@gmail.com" class="contact-item-link">paulaandrezza25@gmail.com</a>
                 </div>
-
               </li>
-
+  
               <li  class="contact-item">
-
                 <div class="contact-icon">
                   <ion-icon name="navigate-circle"></ion-icon>
                 </div>
-
                 <div>
                   <h3 class="contact-item-title">Endereço</h3>
-
                   <address class="contact-item-link">
                     Extrema - MG - Brasil
                   </address>
                 </div>
-
               </li>
-
             </ul>
-
           </div>
 
         </div>
