--- a/index.html
+++ b/index.html
@@ -119,18 +119,97 @@
     <section class="section about" id="about">
       <div class="container">
 
-        <div class="about-banner">
-          <img src="./assets/img/sily.png" alt="">
-        </div>
-
         <div class="about-content">
           <p class="section-subtitle">Sobre mim</p>
-          <p>
-            Eu sou uma estudante de full stack, o que significa que estou aprendendo sobre desenvolvimento de software completo, incluindo front-end (interação com o usuário), back-end (registro de dados e processamento) e banco de dados. Eu tenho paixão por criar aplicações web e mobile e gosto de explorar novas tecnologias e soluções para solucionar problemas complexos.
-          </p>
-          <p>
-            Estou sempre em busca de oportunidades para aplicar meus conhecimentos e habilidades em projetos reais, e acredito que ser uma desenvolvedora full stack me permitirá trabalhar em todas as camadas de um aplicativo, tornando-me uma profissional versátil e valiosa para qualquer equipe de desenvolvimento
-          </p>
+
+          <ul class="timeline" id="timeline">
+
+            <li class="timeline-container">
+              <div class="content">
+                <h3>
+                  Aprendizagem Industrial em Eletroeletrônica
+                </h3>
+                <p>Meu primeiro contato com tecnologia, o que me abriu as portas para esse mundo incrível.</p>
+                <h2>2018</h2>
+              </div>
+              <span class="divider"></span>
+              <span class="line"></span>
+              <div class="icon">
+                <span class="material-symbols-rounded">
+                  bolt
+                </span>
+              </div>
+            </li>
+
+            <li class="timeline-container">
+              <div class="content">
+                <h3>
+                  Aprendizagem Industrial em Eletroeletrônica
+                </h3>
+                <p>Meu primeiro contato com tecnologia, o que me abriu as portas para esse mundo incrível.</p>
+                <h2>2018</h2>
+              </div>
+              <span class="divider"></span>
+              <div class="icon">
+                <span class="material-symbols-rounded">
+                  bolt
+                </span>
+              </div>
+            </li>
+
+            <li class="timeline-container">
+              <div class="content">
+                <h3>
+                  Aprendizagem Industrial em Eletroeletrônica
+                </h3>
+                <p>Meu primeiro contato com tecnologia, o que me abriu as portas para esse mundo incrível.</p>
+                <h2>2018</h2>
+              </div>
+              <span class="divider"></span>
+              <div class="icon">
+                <span class="material-symbols-rounded">
+                  bolt
+                </span>
+              </div>
+            </li>
+
+            <li class="timeline-container">
+              <div class="content">
+                <h3>
+                  Aprendizagem Industrial em Eletroeletrônica
+                </h3>
+                <p>Meu primeiro contato com tecnologia, o que me abriu as portas para esse mundo incrível.</p>
+                <h2>2018</h2>
+              </div>
+              <span class="divider"></span>
+              <div class="icon">
+                <span class="material-symbols-rounded">
+                  bolt
+                </span>
+              </div>
+            </li>
+
+            <li class="timeline-container">
+              <div class="content">
+                <h3>
+                  Aprendizagem Industrial em Eletroeletrônica
+                </h3>
+                <p>Meu primeiro contato com tecnologia, o que me abriu as portas para esse mundo incrível.</p>
+                <h2>2018</h2>
+              </div>
+              <span class="divider"></span>
+              <div class="icon">
+                <span class="material-symbols-rounded">
+                  bolt
+                </span>
+              </div>
+            </li>
+
+            
+
+
+
+          </ul>
 
           <a href="#portfolio" class="btn2">Portfólio</a>
         </div>
