--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
 
   <!-- Back to Top -->
-  <a href="#top" class="back-to-top" data-back-to-top>BACK TOP</a>
+  <a href="#top" class="back-to-top" data-back-to-top>BACK TO TOP</a>
 
 
   <!-- IonIcon -->
