add border neon

--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
           <ul class="navbar-list">
             
             <li>
-              <a class="btn2" href="#home" data-nav-link>Home</a>
+              <a href="#home" data-nav-link>Home</a>
             </li>
             <li>
-              <a href="#about" class="btn2" data-nav-link>Sobre</a>
+              <a href="#about" data-nav-link>Sobre</a>
             </li>
             <li>
-              <a href="#portfolio" class="btn2" data-nav-link>Portfólio</a>
+              <a href="#portfolio" data-nav-link>Portfólio</a>
             </li>
             <li>
-              <a href="#contact" class="btn2" data-nav-link>Contato</a>
+              <a href="#contact" data-nav-link>Contato</a>
             </li>  
           </ul>
         </nav>
@@ -75,7 +75,7 @@
 
     <!-- Home -->
     <section class="section home" id="home">
-      <div class="container">
+      <div class="container neon-border">
 
         <div class="home-banner">
           <img src="./assets/img/cutie.png" alt="">
