add section skills

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 
-
   <!-- Icons Google -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
+
+  <!-- Icons DevIcons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
@@ -49,6 +51,9 @@
             </li>
             <li>
               <a href="#portfolio" data-nav-link>Portfólio</a>
+            </li>
+            <li>
+              <a href="#skills" data-nav-link>Habilidades</a>
             </li>
             <li>
               <a href="#contact" data-nav-link>Contato</a>
@@ -226,6 +231,17 @@
       </div>
 
       <a href="https://github.com/paulaandrezza" class="btn" target="_blank">Veja mais no meu GitHub</a>
+    </section>
+
+
+    <!-- Skills -->
+    <section class="section skills" id="skills">
+      <div class="container">
+        <p class="section-subtitle">Habilidades</p>
+        <div id="skill-template">
+
+        </div>
+      </div>
     </section>
 
 
