fazendo modificações no background do header

--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
           <ul class="navbar-list">
             
             <li>
-              <a href="#home" data-nav-link>Home</a>
+              <a class="btn2" href="#home" data-nav-link>Home</a>
             </li>
             <li>
-              <a href="#about" data-nav-link>Sobre</a>
+              <a class="btn2" href="#about" data-nav-link>Sobre</a>
             </li>
             <li>
-              <a href="#portfolio" data-nav-link>Portfólio</a>
+              <a class="btn2" href="#portfolio" data-nav-link>Portfólio</a>
             </li>
             <li>
-              <a href="#skills" data-nav-link>Habilidades</a>
+              <a class="btn2" href="#skills" data-nav-link>Habilidades</a>
             </li>
             <li>
-              <a href="#contact" data-nav-link>Contato</a>
+              <a class="btn2" href="#contact" data-nav-link>Contato</a>
             </li>  
           </ul>
         </nav>
@@ -80,10 +80,10 @@
 
     <!-- Home -->
     <section class="section home" id="home">
-      <div class="container neon-border">
+      <div class="container">
 
         <div class="home-banner">
-          <img src="./assets/img/cutie.png" alt="">
+          <img src="./assets/img/paulinha.jpg" alt="">
         </div>
 
         <div class="home-content">
@@ -238,9 +238,7 @@
     <section class="section skills" id="skills">
       <div class="container">
         <p class="section-subtitle">Habilidades</p>
-        <div id="skill-template">
-
-        </div>
+        <div id="skill-template"></div>
       </div>
     </section>
 
