change the home photo

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="container">
 
         <div class="home-banner">
-          <img src="./assets/img/paulinha.jpg" alt="">
+          <img src="./assets/img/perfil.jpg" alt="paula">
         </div>
 
         <div class="home-content">
